--- a/app/views/layouts/templates/_header.html.erb
+++ b/app/views/layouts/templates/_header.html.erb
@@ -49,7 +49,7 @@
                             <%=link_to 'Accueil', root_path %>
                         </li>
                         <li class="nav-menu-item">
-                            <a href="shop_grid.html">Chats</a>
+                            <a href="#">Chats</a>
                             <div class="nav-dropdown col2-dropdown">
                                 <div class="row">
                                     <div class="col-lg-6">
@@ -84,7 +84,7 @@
                         </li>
 
                         <li class="nav-menu-item">
-                            <a href="shop_grid.html">Chatons</a>
+                            <a href="#">Chatons</a>
                             <div class="nav-dropdown col2-dropdown">
                                 <div class="row">
                                     <div class="col-lg-6">
@@ -117,7 +117,7 @@
                             </div>
                         </li>
                         <li class="nav-menu-item">
-                            <a href="shop_grid.html">Chattes</a>
+                            <a href="#">Chattes</a>
                             <div class="nav-dropdown col2-dropdown">
                                 <div class="row">
                                     <div class="col-lg-6">
