mise à jour readme

--- a/app/views/layouts/templates/_top_bar.html.erb
+++ b/app/views/layouts/templates/_top_bar.html.erb
@@ -14,6 +14,7 @@
                         <div class="dropdown-menu">
                             <a href="/users/edit/" class="dropdown-item">Mon profil</a>
                             <a href="/paniers/index" class="dropdown-item">Panier</a>
+                            <a href="/orders/index" class="dropdown-item">Commandes</a>
                         </div>
                     </li>
 
